[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Icons/Pause.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Spoikofo-filled.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/menu/Settings/settings_menu.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
pause_mode = 2
margin_left = 510.0
margin_top = 279.0
margin_right = 769.0
margin_bottom = 441.0
custom_constants/separation = 10

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_right = 259.0

[node name="Resume Game" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 10.0
margin_right = 259.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
text = "Resume Game"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 259.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 259.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="pause" type="Sprite" parent="."]
position = Vector2( 636, 191 )
texture = ExtResource( 2 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume Game" to="." method="_on_Resume_Game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
